--- a/Views/Topics/Index.cshtml
+++ b/Views/Topics/Index.cshtml
@@ -57,7 +57,7 @@
 
 
 
-                <div class="custom-block custom-block-topics-listing bg-white shadow-lg mb-5">
+                @*<div class="custom-block custom-block-topics-listing bg-white shadow-lg mb-5">
                     <div class="d-flex">
                         <img src="images/topics/undraw_Remote_design_team_re_urdx.png" class="custom-block-image img-fluid" alt="">
 
@@ -109,7 +109,7 @@
                             <span class="badge bg-music rounded-pill ms-auto">20</span>
                         </div>
                     </div>
-                </div>
+                </div>*@
             </div>
 
             <div class="col-lg-12 col-12">
