--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,12 +15,12 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Open+Sans&display=swap" rel="stylesheet">
-                        
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+                       
+        <link href="@Url.Content("~/css/bootstrap.min.css")" rel="stylesheet">
 
-        <link href="css/bootstrap-icons.css" rel="stylesheet">
+        <link href="@Url.Content("~/css/bootstrap-icons.css")" rel="stylesheet">
 
-        <link href="css/templatemo-topic-listing.css" rel="stylesheet">      
+        <link href="@Url.Content("~/css/templatemo-topic-listing.css") " rel="stylesheet">      
 
 
     </head>
@@ -165,11 +165,11 @@
 
 
         <!-- JAVASCRIPT FILES -->
-        <script src="js/jquery.min.js"></script>
-        <script src="js/bootstrap.bundle.min.js"></script>
-        <script src="js/jquery.sticky.js"></script>
-        <script src="js/click-scroll.js"></script>
-        <script src="js/custom.js"></script>
+        <script src='@Url.Content("~/js/jquery.min.js")'></script>
+        <script src='@Url.Content("~/js/bootstrap.bundle.min.js")'></script>
+        <script src='@Url.Content("~/js/jquery.sticky.js")'></script>
+        <script src='@Url.Content("~/js/click-scroll.js")'></script>
+        <script src='@Url.Content("~/js/custom.js")'></script>
 
     </body>
 </html>
