--- a/Views/Topics/Index.cshtml
+++ b/Views/Topics/Index.cshtml
@@ -38,7 +38,7 @@
                 {
                     <div class="custom-block custom-block-topics-listing bg-white shadow-lg mb-5">
                         <div class="d-flex">
-                            <img src="images/topics/undraw_Remote_design_team_re_urdx.png" class="custom-block-image img-fluid" alt="">
+                            <img src="~/images/topics/undraw_Remote_design_team_re_urdx.png" class="custom-block-image img-fluid" alt="">
 
                             <div class="custom-block-topics-listing-info d-flex">
                                 <div>
@@ -59,7 +59,7 @@
 
                 @*<div class="custom-block custom-block-topics-listing bg-white shadow-lg mb-5">
                     <div class="d-flex">
-                        <img src="images/topics/undraw_Remote_design_team_re_urdx.png" class="custom-block-image img-fluid" alt="">
+                        <img src="~/images/topics/undraw_Remote_design_team_re_urdx.png" class="custom-block-image img-fluid" alt="">
 
                         <div class="custom-block-topics-listing-info d-flex">
                             <div>
@@ -77,7 +77,7 @@
 
                 <div class="custom-block custom-block-topics-listing bg-white shadow-lg mb-5">
                     <div class="d-flex">
-                        <img src="images/topics/undraw_online_ad_re_ol62.png" class="custom-block-image img-fluid" alt="">
+                        <img src="~/images/topics/undraw_online_ad_re_ol62.png" class="custom-block-image img-fluid" alt="">
 
                         <div class="custom-block-topics-listing-info d-flex">
                             <div>
@@ -95,7 +95,7 @@
 
                 <div class="custom-block custom-block-topics-listing bg-white shadow-lg mb-5">
                     <div class="d-flex">
-                        <img src="images/topics/undraw_Podcast_audience_re_4i5q.png" class="custom-block-image img-fluid" alt="">
+                        <img src="~/images/topics/undraw_Podcast_audience_re_4i5q.png" class="custom-block-image img-fluid" alt="">
 
                         <div class="custom-block-topics-listing-info d-flex">
                             <div>
@@ -176,7 +176,7 @@
                             <span class="badge bg-finance rounded-pill ms-auto">30</span>
                         </div>
 
-                        <img src="images/topics/undraw_Finance_re_gnv2.png" class="custom-block-image img-fluid" alt="">
+                        <img src="~/images/topics/undraw_Finance_re_gnv2.png" class="custom-block-image img-fluid" alt="">
                     </a>
                 </div>
             </div>
@@ -184,7 +184,7 @@
             <div class="col-lg-6 col-md-6 col-12 mt-lg-3">
                 <div class="custom-block custom-block-overlay">
                     <div class="d-flex flex-column h-100">
-                        <img src="images/businesswoman-using-tablet-analysis.jpg" class="custom-block-image img-fluid" alt="">
+                        <img src="~/images/businesswoman-using-tablet-analysis.jpg" class="custom-block-image img-fluid" alt="">
 
                         <div class="custom-block-overlay-text d-flex">
                             <div>
