--- a/Views/Topics/Detail.cshtml
+++ b/Views/Topics/Detail.cshtml
@@ -3,7 +3,7 @@
 }
 
 @using Alghorithms.Models
-@*@model List<Topic>*@
+@model List<Content>
             <header class="site-header d-flex flex-column justify-content-center align-items-center">
                 <div class="container">
                     <div class="row justify-content-center align-items-center">
