--- a/Views/Topics/Index.cshtml
+++ b/Views/Topics/Index.cshtml
@@ -38,7 +38,7 @@
                 {
                     <div class="custom-block custom-block-topics-listing bg-white shadow-lg mb-5">
                         <div class="d-flex">
-                            <img src="~/images/topics/undraw_Remote_design_team_re_urdx.png" class="custom-block-image img-fluid" alt="">
+                            @*<img src="~/images/topics/undraw_Remote_design_team_re_urdx.png" class="custom-block-image img-fluid" alt="">*@
 
                             <div class="custom-block-topics-listing-info d-flex">
                                 <div>
@@ -46,7 +46,10 @@
 
                                     <p class="mb-0">Topic Listing includes home, listing, detail and contact pages. Feel free to modify this template for your custom websites.</p>
 
-                                    <a href="topics-detail.html" class="btn custom-btn mt-3 mt-lg-4">Learn More</a>
+                                    @if (!topic.HasChildren)
+                                    {
+                                        <a href="@Url.Action("Detail", "Topics", new { Id = topic.Id})" class="btn custom-btn mt-3 mt-lg-4">Learn More</a>
+                                    }
                                 </div>
 
                                 <span class="badge bg-design rounded-pill ms-auto">14</span>
