fixing font and adding some controllers

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-lg-5 me-lg-auto">
                             <li class="nav-item">
-                                <a class="nav-link click-scroll" href="@Url.Action("Index", "Home")">Главная</a>
+                                <a class="nav-link" href="@Url.Action("Index", "Home")">Главная</a>
                             </li>
 
                             <li class="nav-item">
@@ -55,7 +55,7 @@
                             </li>
     
                             <li class="nav-item">
-                                <a class="nav-link click-scroll" href="#section_3">How it works</a>
+                                <a class="nav-link" href="#section_3">Задачи</a>
                             </li>
 
                             <li class="nav-item">
