--- a/Views/Topics/Detail.cshtml
+++ b/Views/Topics/Detail.cshtml
@@ -8,7 +8,7 @@
                 <div class="container">
                     <div class="row justify-content-center align-items-center">
 
-                        <div class="col-lg-5 col-12 mb-5">
+                        <div class="col-lg-11 col-12 mb-5">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a href="index.html">Homepage</a></li>
@@ -30,32 +30,32 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-5 col-12">
+                        @*<div class="col-lg-5 col-12">
                             <div class="topics-detail-block bg-white shadow-lg">
                                 <img src="~/images/topics/undraw_Remote_design_team_re_urdx.png" class="topics-detail-block-image img-fluid">
                             </div>
-                        </div>
+                        </div>*@
 
                     </div>
                 </div>
             </header>
 
 
-            <section class="topics-detail-section section-padding" id="topics-detail">
-                <div class="container">
-                    <div class="row">
+<section class="topics-detail-section section-padding" id="topics-detail">
+    <div class="container">
+        <div class="row">
 
-                    @foreach (var content in Model)
-                    {
-                        <div class="col-lg-8 col-12 m-auto">
-                            @if(content.ContentTypeName == "Title")
-                            {
-                                <h3 class="mb-4">@content.Data</h3>
-                            }
-                            else if(content.ContentTypeName == "Text")
-                            {
-                                <p>@content.Data</p>
-                            }
+        @foreach (var content in Model)
+        {
+            <div class="col-lg-8 col-12 m-auto">
+                @if(content.ContentTypeName == "Title")
+                {
+                    <h3 class="mb-4">@content.Data</h3>
+                }
+                else if(content.ContentTypeName == "Text")
+                {
+                    <p>@content.Data</p>
+                }
                             else if(content.ContentTypeName == "Subtitle")
                             {
                                 
