--- a/wwwroot/css/templatemo-topic-listing.css
+++ b/wwwroot/css/templatemo-topic-listing.css
@@ -658,12 +658,12 @@ blockquote {
   background-color: var(--section-bg-color);
   border-radius: var(--border-radius-small);
   font-family: var(--title-font-family);
-  font-size: var(--h4-font-size);
-  font-weight: var(--font-weight-bold);
+  font-size: var(--h6-font-size);
+  /*font-weight: var(--font-weight-bold);*/
   display: inline-block;
   text-align: center;
   margin: 30px;
-  padding: 40px;
+  padding: 30px;
 }
 
 .topics-listing-page .site-header {
