--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Topic Listing Bootstrap 5 Template</title>
+        <title>Алгоритмы программирования</title>
 
         <!-- CSS FILES -->        
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,7 +33,7 @@
                 <div class="container">
                     <a class="navbar-brand" href="@Url.Action("Index", "Home")">
                         <i class="bi-back"></i>
-                        <span>Topic</span>
+                        <span>Algorithms</span>
                     </a>
 
                     <div class="d-lg-none ms-auto me-4">
@@ -56,14 +56,6 @@
     
                             <li class="nav-item">
                                 <a class="nav-link" href="#section_3">Задачи</a>
-                            </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link click-scroll" href="#section_4">FAQs</a>
-                            </li>
-    
-                            <li class="nav-item">
-                                <a class="nav-link click-scroll" href="#section_5">Contact</a>
                             </li>
 
                             <li class="nav-item dropdown">
