--- a/Views/Topics/Detail.cshtml
+++ b/Views/Topics/Detail.cshtml
@@ -17,11 +17,7 @@
                                 </ol>
                             </nav>
 
-                            @*<h2 class="text-white">Introduction to <br> Web Design 101</h2>*@
-                            @if (@Model.First() != null)
-                            {
-                            <h2 class="text-white">@Model[0].Data</h2>
-                            }
+                            <h2 class="text-white">@ViewData["Title"]</h2>
 
                             <div class="d-flex align-items-center mt-5">
                                 <a href="#topics-detail" class="btn custom-btn custom-border-btn smoothscroll me-4">Read More</a>
@@ -86,7 +82,7 @@
                         </div>
                     }
 
-                        <div class="col-lg-8 col-12 m-auto">
+                        @*<div class="col-lg-8 col-12 m-auto">
                             <h3 class="mb-4">Introduction to Web Design</h3>
 
                             <p>So how can you stand out, do something unique and interesting, build an online business, and get paid enough to change life. Please visit TemplateMo website to download free website templates.</p>
@@ -108,11 +104,14 @@
                             </div>
 
                             <p>Most people start with freelancing skills they already have as a side hustle to build up income. This extra cash can be used for a vacation, to boost up savings, investing, build business.</p>
-                        </div>
+                        </div>*@
 
                     </div>
                 </div>
             </section>
+
+
+            @*TODO: comments*@
 
 
             <section class="section-padding section-bg">
@@ -138,5 +137,3 @@
                     </div>
                 </div>
             </section>
-если работаем с отсортированным массивом
-если нужно быстро написать функцию поиска
