add half of code

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Алгоритмы программирования</title>
+        <title>Topic Listing Bootstrap 5 Template</title>
 
         <!-- CSS FILES -->        
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,6 @@
 
         <link href="@Url.Content("~/css/templatemo-topic-listing.css") " rel="stylesheet">      
 
-
     </head>
     
     <body id="top">
@@ -33,7 +32,7 @@
                 <div class="container">
                     <a class="navbar-brand" href="@Url.Action("Index", "Home")">
                         <i class="bi-back"></i>
-                        <span>Algorithms</span>
+                        <span>Topic</span>
                     </a>
 
                     <div class="d-lg-none ms-auto me-4">
@@ -47,7 +46,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-lg-5 me-lg-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="@Url.Action("Index", "Home")">Главная</a>
+                                <a class="nav-link click-scroll" href="@Url.Action("Index", "Home")">Главная</a>
                             </li>
 
                             <li class="nav-item">
@@ -55,7 +54,15 @@
                             </li>
     
                             <li class="nav-item">
-                                <a class="nav-link" href="#section_3">Задачи</a>
+                                <a class="nav-link click-scroll" href="#section_3">How it works</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link click-scroll" href="#section_4">FAQs</a>
+                            </li>
+    
+                            <li class="nav-item">
+                                <a class="nav-link click-scroll" href="#section_5">Contact</a>
                             </li>
 
                             <li class="nav-item dropdown">
