--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Topic Listing Bootstrap 5 Template</title>
+        <title>Algorithms</title>
 
         <!-- CSS FILES -->        
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,7 +32,7 @@
                 <div class="container">
                     <a class="navbar-brand" href="@Url.Action("Index", "Home")">
                         <i class="bi-back"></i>
-                        <span>Topic</span>
+                        <span>Algorithms</span>
                     </a>
 
                     <div class="d-lg-none ms-auto me-4">
@@ -54,25 +54,11 @@
                             </li>
     
                             <li class="nav-item">
-                                <a class="nav-link click-scroll" href="#section_3">How it works</a>
+                                 <a class="nav-link"  href="@Url.Action("InDevelopment", "Home")">Задачи</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link click-scroll" href="#section_4">FAQs</a>
-                            </li>
-    
-                            <li class="nav-item">
-                                <a class="nav-link click-scroll" href="#section_5">Contact</a>
-                            </li>
-
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarLightDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
-
-                                <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarLightDropdownMenuLink">
-                                    <li><a class="dropdown-item" href="@Url.Action("Index", "Topics")">Topics Listing</a></li>
-
-                                    <li><a class="dropdown-item" href="contact.html">Contact Form</a></li>
-                                </ul>
+                                <a class="nav-link" href="@Url.Action("InDevelopment", "Home")">Contact</a>
                             </li>
                         </ul>
 
@@ -167,7 +153,7 @@
         <script src='@Url.Content("~/js/jquery.min.js")'></script>
         <script src='@Url.Content("~/js/bootstrap.bundle.min.js")'></script>
         <script src='@Url.Content("~/js/jquery.sticky.js")'></script>
-        <script src='@Url.Content("~/js/click-scroll.js")'></script>
+        @*<script src='@Url.Content("~/js/click-scroll.js")'></script>*@
         <script src='@Url.Content("~/js/custom.js")'></script>
 
     </body>
