--- a/Views/Topics/Index.cshtml
+++ b/Views/Topics/Index.cshtml
@@ -7,16 +7,16 @@
     <div class="container">
         <div class="row align-items-center">
 
-            <div class="col-lg-5 col-12">
+            <div class="col-lg-8 col-12">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="@Url.Action("Index", "Home")">Homepage</a></li>
 
-                        <li class="breadcrumb-item active" aria-current="page">Все алгоритмы</li>
+                        <li class="breadcrumb-item active" aria-current="page">@(ViewData["Title"] ?? "Все алгоритмы")</li>
                     </ol>
                 </nav>
 
-                <h2 class="text-white">Все алгоритмы</h2>
+                <h2 class="text-white">@(ViewData["Title"] ?? "Все алгоритмы")</h2>
             </div>
 
         </div>
@@ -44,11 +44,11 @@
                                 <div>
                                     <h5 class="mb-2">@topic.Name</h5>
 
-                                    <p class="mb-0">Topic Listing includes home, listing, detail and contact pages. Feel free to modify this template for your custom websites.</p>
+                                    <p class="mb-0" style="color: #fff">Topic Listing includes home, listing, detail and contact pages. Feel free to modify this template for your custom websites.</p>
 
                                     @if (!topic.HasChildren)
                                     {
-                                        <a href="@Url.Action("Detail", "Topics", new { Id = topic.Id})" class="btn custom-btn mt-3 mt-lg-4">Learn More</a>
+                                        <a href="@Url.Action("Detail", "Topics", new { Id = topic.Id})" class="btn custom-btn mt-3 mt-lg-4">Подробнее</a>
                                     }
                                 </div>
                                 @if (topic.HasChildren)
@@ -71,7 +71,7 @@
 
                                         @if (!child.HasChildren)
                                         {
-                                            <a href="@Url.Action("Detail", "Topics", new { Id = child.Id})" class="btn custom-btn mt-3 mt-lg-4">Learn More</a>
+                                            <a href="@Url.Action("Detail", "Topics", new { Id = child.Id})" class="btn custom-btn mt-3 mt-lg-4">Подробнее</a>
                                         }
                                     </div>
                                 </div>
@@ -82,64 +82,9 @@
 
                 }
 
-
-
-                @*<div class="custom-block custom-block-topics-listing bg-white shadow-lg mb-5">
-                    <div class="d-flex">
-                        <img src="~/images/topics/undraw_Remote_design_team_re_urdx.png" class="custom-block-image img-fluid" alt="">
-
-                        <div class="custom-block-topics-listing-info d-flex">
-                            <div>
-                                <h5 class="mb-2">Web Design</h5>
-
-                                <p class="mb-0">Topic Listing includes home, listing, detail and contact pages. Feel free to modify this template for your custom websites.</p>
-
-                                <a href="topics-detail.html" class="btn custom-btn mt-3 mt-lg-4">Learn More</a>
-                            </div>
-
-                            <span class="badge bg-design rounded-pill ms-auto">14</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="custom-block custom-block-topics-listing bg-white shadow-lg mb-5">
-                    <div class="d-flex">
-                        <img src="~/images/topics/undraw_online_ad_re_ol62.png" class="custom-block-image img-fluid" alt="">
-
-                        <div class="custom-block-topics-listing-info d-flex">
-                            <div>
-                                <h5 class="mb-2">Advertising</h5>
-
-                                <p class="mb-0">Visit TemplateMo website to download free CSS templates. Lorem ipsum dolor, sit amet consectetur adipisicing elit animi necessitatibus</p>
-
-                                <a href="topics-detail.html" class="btn custom-btn mt-3 mt-lg-4">Learn More</a>
-                            </div>
-
-                            <span class="badge bg-advertising rounded-pill ms-auto">30</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="custom-block custom-block-topics-listing bg-white shadow-lg mb-5">
-                    <div class="d-flex">
-                        <img src="~/images/topics/undraw_Podcast_audience_re_4i5q.png" class="custom-block-image img-fluid" alt="">
-
-                        <div class="custom-block-topics-listing-info d-flex">
-                            <div>
-                                <h5 class="mb-2">Podcast</h5>
-
-                                <p class="mb-0">Lorem ipsum dolor, sit amet consectetur adipisicing elit animi necessitatibus</p>
-
-                                <a href="topics-detail.html" class="btn custom-btn mt-3 mt-lg-4">Learn More</a>
-                            </div>
-
-                            <span class="badge bg-music rounded-pill ms-auto">20</span>
-                        </div>
-                    </div>
-                </div>*@
             </div>
 
-            <div class="col-lg-12 col-12">
+            @*<div class="col-lg-12 col-12">
                 <nav aria-label="Page navigation example">
                     <ul class="pagination justify-content-center mb-0">
                         <li class="page-item">
@@ -175,14 +120,14 @@
                         </li>
                     </ul>
                 </nav>
-            </div>
+            </div>*@
 
         </div>
     </div>
 </section>
 
 
-<section class="section-padding section-bg">
+@*<section class="section-padding section-bg">
     <div class="container">
         <div class="row">
 
@@ -252,4 +197,4 @@
 
         </div>
     </div>
-</section>
+</section>*@
