--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -52,13 +52,23 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="@Url.Action("Index", "Topics")">Алгоритмы</a>
                             </li>
-    
+
                             <li class="nav-item">
-                                 <a class="nav-link"  href="@Url.Action("InDevelopment", "Home")">Задачи</a>
+                                <a class="nav-link" href="@Url.Action("InDevelopment", "Home")">Задачи</a>
                             </li>
 
                             <li class="nav-item">
                                 <a class="nav-link" href="@Url.Action("InDevelopment", "Home")">Contact</a>
+                            </li>
+
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarLightDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Auth</a>
+
+                                <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarLightDropdownMenuLink">
+                                    <li><a class="dropdown-item" href="@Url.Action("Login", "Auth")">Sign In</a></li>
+
+                                    <li><a class="dropdown-item" href="@Url.Action("Register", "Auth")">Sign Up</a></li>
+                                </ul>
                             </li>
                         </ul>
 
