--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -8,15 +8,15 @@
     <div class="container">
         <div class="row">
             <div class="template-page-wrapper">
-                <form class="form-horizontal templatemo-signin-form" role="form" action="index.html" method="get">
+                <form class="form-horizontal templatemo-signin-form" role="form"method="post">
 
                     <div class="form-group">
                         <div class="col-md-12">
-                            <label for="login" class="col-sm-2 control-label">Login</label>
+                            <label for="email" class="col-sm-2 control-label">Login/email</label>
                             <div class="col-sm-10">
-                                <input type="text" name="login" class="form-control" id="login" placeholder="Username">
+                                <input type="text" name="email" class="form-control" id="email" placeholder="Login/email">
                             </div>
-                        </div>              
+                        </div>
                     </div>
 
                     <div class="form-group">
