--- a/Views/Auth/Register.cshtml
+++ b/Views/Auth/Register.cshtml
@@ -11,9 +11,18 @@
 
                     <div class="form-group">
                         <div class="col-md-12">
-                            <label for="login" class="col-sm-2 control-label">Login</label>
+                            <label for="username" class="col-sm-2 control-label">User name</label>
                             <div class="col-sm-10">
-                                <input type="text" name="login" class="form-control" id="login" placeholder="Login">
+                                <input type="text" name="username" class="form-control" id="username" placeholder="username">
+                            </div>
+                        </div>              
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            <label for="email" class="col-sm-2 control-label">Login/email</label>
+                            <div class="col-sm-10">
+                                <input type="text" name="email" class="form-control" id="email" placeholder="email">
                             </div>
                         </div>              
                     </div>
@@ -29,9 +38,9 @@
 
                     <div class="form-group">
                         <div class="col-md-12">
-                            <label for="password" class="col-sm-2 control-label">Повторите пароль</label>
+                            <label for="repassword" class="col-sm-2 control-label">Повторите пароль</label>
                             <div class="col-sm-10">
-                                <input type="password" name="password" class="form-control" id="password" placeholder="Повторите пароль">
+                                <input type="password" name="repassword" class="form-control" id="repassword" placeholder="Повторите пароль">
                             </div>
                         </div>
                     </div>
