--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!doctype html>
+﻿@using System.Security.Claims
+<!doctype html>
 <html lang="ru">
     <head>
         <meta charset="utf-8">
@@ -134,6 +135,7 @@
                             </a>
                         </p>
                     </div>
+                         @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 
                     <div class="col-lg-3 col-md-4 col-12 mt-4 mt-lg-0 ms-auto">
                         <div class="dropdown">
@@ -146,11 +148,17 @@
                                 <li><button class="dropdown-item" type="button">Myanmar</button></li>
 
                                 <li><button class="dropdown-item" type="button">Arabic</button></li>
+
+                                @*<li><button class="dropdown-item" type="button">@HttpContextAccessor.HttpContext.User.FindFirst(ClaimTypes.NameIdentifier).Value</button></li>
+
+                                <li><button class="dropdown-item" type="button">@HttpContextAccessor.HttpContext.User.FindFirst(ClaimTypes.Name).Value</button></li>
+
+                                <li><button class="dropdown-item" type="button">@HttpContextAccessor.HttpContext.User.FindFirst(ClaimTypes.Role).Value</button></li>*@
                             </ul>
                         </div>
 
-                        <p class="copyright-text mt-lg-5 mt-4">Copyright © 2048 Topic Listing Center. All rights reserved.
-                        <br><br>Design: <a rel="nofollow" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+                        <p class="copyright-text mt-lg-5 mt-4">Copyright © 2024 Algorithms. All rights reserved.
+                        <br><br>Design made by Shakhzod</p>
                         
                     </div>
 
