--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -61,7 +61,14 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="@Url.Action("InDevelopment", "Home")">Contact</a>
                             </li>
-
+                            @if (@HttpContextAccessor.HttpContext.User.FindFirst(ClaimTypes.NameIdentifier) != null)
+                            {
+                            <li class="nav-item">
+                                <a class="nav-link" href="@Url.Action("InDevelopment", "Home")">Профиль</a>
+                            </li>
+                            } 
+                            else 
+                            {
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarLightDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Auth</a>
 
@@ -71,6 +78,8 @@
                                     <li><a class="dropdown-item" href="@Url.Action("Register", "Auth")">Sign Up</a></li>
                                 </ul>
                             </li>
+                            }
+
                         </ul>
 
                         <div class="d-none d-lg-block">
